# notenest

./: .gitignore  CLAUDE.md  Makefile  QUICKSTART.md  README.md  README_WEB.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/pages/: search.md  tags.md  welcome.md  wiki-links.md
docs/: setup.md  usage.md
examples/plugins/: recipe_plugin.py
examples/plugins/recipe_plugin/: README.md  __init__.py  plugin.py
examples/recipes/: chocolate-cake.md  curry-rice.md  curry.md  pasta-carbonara.md
src/notenest/: __init__.py  __main__.py
src/notenest/cli/: __init__.py
src/notenest/core/: export.py  importer.py  link.py  metadata.py  page.py  repository.py  search.py  tag.py
src/notenest/plugins/: __init__.py  base.py  registry.py
src/notenest/plugins/builtin/: __init__.py  default.py
src/notenest/storage/: __init__.py  db_store.py  file_store.py
src/notenest/ui/: __init__.py  app.py
src/web/: __init__.py
src/web/api/: __init__.py  dependencies.py  main.py  models.py
src/web/api/routes/: pages.py  plugins.py  search.py  tags.py
src/web/frontend/: package-lock.json  package.json
src/web/frontend/src/: App.tsx
src/web/frontend/src/api/: client.ts
src/web/frontend/src/components/: Layout.tsx
src/web/frontend/src/pages/: PageCreate.tsx  PageEditor.tsx  PageList.tsx  PageView.tsx  (+1 more)
tests/test_api/: test_main.py
tests/test_core/: __init__.py  test_export.py  test_metadata.py  test_repository.py  test_search.py
tests/test_plugins/: __init__.py  test_base.py  test_recipe_plugin.py  test_registry.py
tests/test_storage/: __init__.py  test_db_store.py
workspace/pages/: hogehogehoge.md
(+1 files in other folders)
