[project]
name = "notenest"
version = "0.1.0"
description = "マークダウンベース ナレッジベース・Wikiシステム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "pyyaml>=6.0.2",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "types-pyyaml>=6.0.12",
    "types-markdown>=3.7.0",
]

[project.scripts]
notenest = "notenest.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM105", "SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["frontmatter", "textual.*", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["notenest.ui.*"]
disable_error_code = ["misc", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/notenest"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
